feat: Bring in Google Maps API and create map

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3">
+      </script>
     <title>React App</title>
   </head>
   <body>
