refactor: Remove default ServiceWorker

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
       <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3">
       </script>
-    <title>React App</title>
+    <title>10 of NYC's Oldest Bars</title>
   </head>
   <body>
     <noscript>
