--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3">
+    <script>
+      function isGoogleLoaded () {
+        // this is a noop - will be overwritten inside the React component if Google isn't already loaded by then
+      }
+    </script>
+      <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3&callback=isGoogleLoaded" async defer>
       </script>
     <title>10 of NYC's Oldest Bars</title>
   </head>
