--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         // this is a noop - will be overwritten inside the React component if Google isn't already loaded by then
       }
     </script>
-      <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3&callback=isGoogleLoaded" async defer>
+      <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyAatyl_LvUeBi30GYbuNTzgNOgfM01bDMg&v=3&callback=isGoogleLoaded" async defer onerror="window.gm_authFailure()">
       </script>
     <title>10 of NYC's Oldest Bars</title>
   </head>
